[package]
name = "armv8a_semihosting"
description = "ARMv8 semihosting macros"
version = "0.0.1"
edition = "2021"
authors = ["Enzo Albornoz <enzocoelhoalbornoz@gmail.com>"]
license = "MIT"
keywords = ["armv8", "arm", "semihosting"]
categories = ["no-std", "embedded"]
repository = "https://github.com/EnzoAlbornoz/armv8a-semihosting"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]